<resources>
    <string name="app_name">MyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Profile Screen</string>
    <string name="hidden_screen">Hidden Screen</string>
    <string name="go_back">Go back</string>
    <string name="history_screen">History Screen</string>
    <string name="go_forward">Go forward</string>
    <string name="main_screen">Main Screen</string>
    <string name="map_screen">Map Screen</string>
    <string name="settings_screen">Settings Screen</string>
    <string name="main">Main</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="map">Map</string>
</resources>