<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/main" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/baseline_history_edu_24"
        android:title="@string/history" />

    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/map" />

</menu>